# phenglei-platform

./: .gitignore  README.md
phenglei/API/: CMakeLists.txt
phenglei/API/Common/include/: AMRDef.h  Constants.h  Glb_Dimension.h  LIB_Macro.h  PHHeader.h  Precision.h
phenglei/API/Common/src/: Glb_Dimension.cpp
phenglei/API/Data/include/: Data_Field.h  Data_IndexData.h  Data_IndexData.hxx  Data_Param.h  Data_ParamFieldSuite.h  Data_SafeData.h  Data_SafeData.hxx  Data_Util.h  GlobalDataBase.h
phenglei/API/Data/src/: Data_Field.cpp  Data_IndexData.cpp  Data_Param.cpp  Data_ParamFieldSuite.cpp  Data_SafeData.cpp  Data_Util.cpp  GlobalDataBase.cpp
phenglei/API/DataStruct/include/: DataContainer.h  DataStruct_AdtNode.h  DataStruct_AdtNode.hxx  DataStruct_AdtTree.h  DataStruct_AdtTree.hxx  DataStruct_Array.h  DataStruct_BinaryTree.h  DataStruct_KDNode.h  DataStruct_KDTree.h  DataStruct_Range.h  DataStruct_Range.hxx  DataStruct_Sort.h  DataStruct_Sort.hxx  HyList.h  HyList.hxx  PHArray.hxx  PHET.h  PHETBase.h  PHExpr.h  PHExprWrap.h  PHFastArrayIterator.h  PHHeapSort.h  PHMatrix.h  PHMemblock.h  PHMemblock.hxx  PHOps.h  PHOps.hxx  PHProduct.h  PHSimpleArray.h  PHSlice.h  PHSlice.hxx  PHStorage.h  PHVector3.h  Pointer.h  TypeDefine.h
phenglei/API/DataStruct/src/: DataContainer.cpp  DataStruct_BinaryTree.cpp  DataStruct_KDTree.cpp  PHStorage.cpp
phenglei/API/FYMPI/include/: ActionKey.h  PHMpi.h  Parallel.h
phenglei/API/FYMPI/src/: ActionKey.cpp  PHMpi.cpp  Parallel.cpp
phenglei/API/Geometry/include/: FaceProxy.h  FieldProxy.h  GRHash.h  GeneralFieldProxy.h  Geo_CellMetrics_Struct.h  Geo_CellMetrics_Struct.hxx  Geo_CellMetrics_Unstruct.h  Geo_CellMetrics_Unstruct.hxx  Geo_CellTopo_Unstruct.h  Geo_CellTopo_Unstruct.hxx  Geo_DynamicGridMetrics_Struct.h  Geo_DynamicGridMetrics_Struct.hxx  Geo_DynamicGridMetrics_Unstruct.h  Geo_DynamicGridMetrics_Unstruct.hxx  Geo_Element.h  Geo_Face.h  Geo_Face.hxx  Geo_FaceMetrics_Struct.h  Geo_FaceMetrics_Struct.hxx  Geo_FaceMetrics_Unstruct.h  Geo_FaceMetrics_Unstruct.hxx  Geo_FaceTopo_Unstruct.h  Geo_FaceTopo_Unstruct.hxx  Geo_Grid.h  Geo_Grid.hxx  Geo_GridIndex.h  Geo_GridManager.h  Geo_Interface.h  Geo_Interface.hxx  Geo_Interpoint.h  Geo_Interpoint.hxx  Geo_LSQWeight_Unstruct.h  Geo_LSQWeight_Unstruct.hxx  Geo_LineTopo_Unstruct.h  Geo_LineTopo_Unstruct.hxx  Geo_MultiGridInfo_Struct.h  Geo_MultiGridInfo_struct.hxx  Geo_NodeTopo_Struct.h  Geo_NodeTopo_Struct.hxx  Geo_NodeTopo_Unstruct.h  (+34 more)
phenglei/API/Geometry/src/: FaceProxy.cpp  FieldProxy.cpp  GRHash.cpp  GeneralFieldProxy.cpp  Geo_CellMetrics_Struct.cpp  Geo_CellMetrics_Unstruct.cpp  Geo_CellTopo_Unstruct.cpp  Geo_DynamicGridMetrics_Struct.cpp  Geo_DynamicGridMetrics_Unstruct.cpp  Geo_Element.cpp  Geo_FaceMetrics_Struct.cpp  Geo_FaceMetrics_Unstruct.cpp  Geo_FaceTopo_Unstruct.cpp  Geo_Grid.cpp  Geo_GridIndex.cpp  Geo_GridManager.cpp  Geo_Interface.cpp  Geo_Interpoint.cpp  Geo_LSQWeight_Unstruct.cpp  Geo_LineTopo_Unstruct.cpp  Geo_MultiGridInfo_Struct.cpp  Geo_NodeTopo_Struct.cpp  Geo_NodeTopo_Unstruct.cpp  Geo_OversetGrid.cpp  Geo_OversetGridTopo_Struct.cpp  Geo_PointFactory.cpp  Geo_Sample.cpp  Geo_SimpleBC.cpp  Geo_SimpleGrid.cpp  Geo_SimpleVC.cpp  Geo_StructBC.cpp  Geo_StructGrid.cpp  Geo_StructMerge.cpp  Geo_UnstructBC.cpp  Geo_UnstructGrid.cpp  Geo_UnstructMerge.cpp  GeomProxy.cpp  Geometry.cpp  GeometryUnit.cpp  GridType.cpp  (+8 more)
phenglei/API/IO/include/: IO_FileName.h  IO_FileReader.h  IO_HDF5File.h  IO_VirtualFile.h  IO_VirtualFile.hxx  PHIO.h  PHIO.hxx
phenglei/API/IO/src/: IO_FileName.cpp  IO_FileReader.cpp  IO_HDF5File.cpp  IO_VirtualFile.cpp  PHIO.cpp
phenglei/API/LagrangianParticle/include/: IndexCell.h  IndexParticleOfCell.h  Interpolation.h  LagrangianVariable.h  OnePointVariable.h  ParticleAnalysis.h  ParticleForceModel.h  ParticlePointGroup.h  RungeKuttaMethod.h  SimplePointer.h
phenglei/API/LagrangianParticle/src/: IndexCell.cpp  IndexParticleOfCell.cpp  Interpolation.cpp  OnePointVariable.cpp  ParticleAnalysis.cpp  ParticleForceModel.cpp  ParticlePointGroup.cpp  RungeKuttaMethod.cpp
phenglei/API/Math/include/: Math_BasisFunction.h  Math_Limiter.h
phenglei/API/Math/src/: Math_BasisFunction.cpp
phenglei/API/MultiSpecies/include/: ChemModel.h  MixedGas.h
phenglei/API/MultiSpecies/src/: ChemModel.cpp  MixedGas.cpp
phenglei/API/Physics/include/: AerodynamicsBasicRelations.h  AleForceManager.h  AleManager.h  AleModel.h  DeformingSolverManager.h  Flux_Inviscid.h  Flux_RoeEntropyCorrection.h  Force.h  Gas.h  Gradient.h  Gradient.hxx  GradientOperation.h  GridGroup.h  IO_GridReader.h  IO_GridReader.hxx  IncomGas.h  Jacobian.h  Limiter.h  Region.h  (+18 more)
phenglei/CFD/: CMakeLists.txt
phenglei/GPU/: CMakeLists.txt
phenglei/GUI/: CMakeLists.txt  README.md
phenglei/GUI/Resources/: logo.rc
phenglei/Main/: CMakeLists.txt
phenglei/Main/include/: CFDSimulation.h  FieldViewIn.h  FluentIn.h  Gmesh.h  GridFactory.h  GridPartition.h  GridView.h  GridgenIn.h  Simulation.h  SolversList.h
phenglei/Main/src/: CFDSimulation.cpp  FieldViewIn.cpp  FluentIn.cpp  Gmesh.cpp  GridFactory.cpp  GridPartition.cpp  GridView.cpp  GridgenIn.cpp  Simulation.cpp  main.cpp
phenglei/Mesh/: CMakeLists.txt
phenglei/Mesh/include/: ComputationalGrid.h  DynamicGrid.h  InterfaceLinkStructure.h  Mesh_CellTopo.h  Mesh_ConstructInterfaceLink.h  Mesh_Deformation.h  Mesh_DeformationRBF.h  Mesh_DeformationSPRING.h  Mesh_FaceTopo.h  Mesh_Refine.h  Mesh_RefineController.h  Mesh_Refine_Struct.h  Mesh_Refine_Unstruct.h  OversetKDTree.h  UnstructuredOversetConfig.h
phenglei/Mesh/src/: ComputationalGrid.cpp  DynamicGrid.cpp  InterfaceLinkStructure.cpp  Mesh_CellTopo.cpp  Mesh_ConstructInterfaceLink.cpp  Mesh_Deformation.cpp  Mesh_DeformationRBF.cpp  Mesh_DeformationSPRING.cpp  Mesh_FaceTopo.cpp  Mesh_Refine.cpp  Mesh_RefineController.cpp  Mesh_Refine_Struct.cpp  Mesh_Refine_Unstruct.cpp  OversetKDTree.cpp  UnstructuredOversetConfig.cpp
phenglei/PHengLEI/: CMakeLists.txt  Makefile  PHMacro.cmake  hpc_build.sh
phenglei/PHengLEI/Documents/: PHengLEI软件开源协议.docx
phenglei/PHengLEI/anew/: cfd_para.hypara
(+440 files in other folders)
